@@ -1,3 +1,7 @@
+2004-05-07  Sam Steingold  <sds@gnu.org>
+
+	* lispbibl.d (unix) [__OpenBSD__]: define
+
 2004-05-07  Bruno Haible  <bruno@clisp.org>
 
 	* makemake.in (CC_CPLUSPLUS): New variable.
